#summary Changelog for all changes since the fork

= Changes =
== Version 1.39 ==
  * Added preference for "Load images" which, when disabled, forces the Webview to not load any content from the web.
  * Fixed Issue #99 "Sharing with Firefox Sync"
  * 

== Version 1.38 ==
  * Adapt to API-changes, number of articles to be fetched at once has been reduced to 60, got no idea why but am now dealing with it properly.
  * Fixed some bugs in the mechanism to fetch new articles.
  
== Version 1.37 ==
  * Changed events, refreshing of the UI should now be really fast
  * Changed update-mechanism
  * Fixed refresh-button
  * Added separate Build for old devices (below Android 2.1) 
  * Bugfixes

== Version 1.36 ==
  * Notify user about upcoming DB-clean-up (VACUUM)
  * Improve DB-Locking by enabling it (please don't judge me, it's been years since I wrote the line db.setLockingEnabled(false))
  * UI refreshes again when items change (eg. are marked as read, published)
  * Added icons from SDK so all icons look the same
  * Cleaned up the ActionBar
  * Now using API-Level 17

== Version 1.35 ==
  * Articles are again marked as read when beeing read in the webinterface as long as there are new articles to be synced (API doesn't offer "changes since date/time", I can only guess what has changed)
  * Added long-press menu in Article-List: "Mark everything above as read"
  * Another attempt at fixing the IllegalStateExceptions
  * Small bugfixes
  * I need help regarding the SQLiteException "cannot commit transaction - SQL statements in progress: COMMIT;", please contact me if you think you can give any advice on this issue.

== Version 1.34 ==
  * Fixed some DB issues regarding closed cursors
  * Fixed automatic refresh of labels on startup
  * No error-reporting when using app in debug-mode
  * Several minor bugfixes for FCs and ANRs

== Version 1.33 ==
  * Issue #92: Introduced a new preference for the size of the title inside the ArticleHeaderView.