@@ -4,7 +4,8 @@
 == Version 1.39 ==
   * Added preference for "Load images" which, when disabled, forces the Webview to not load any content from the web.
   * Fixed Issue #99 "Sharing with Firefox Sync"
-  * 
+  * Implemented Issue #81: Show temporarily read items in "new articles", the read articles now are all left in the displayed list.
+  * Longer update-interval for background refresh
 
 == Version 1.38 ==
   * Adapt to API-changes, number of articles to be fetched at once has been reduced to 60, got no idea why but am now dealing with it properly.
